# Saas_NLP_API

./: README.md
Documents/: Actions.md  Final_Saas_news_API_DB_Architecture.md  Notes.md  Optimized_Storage_for_NER_output.md  README.md
dx_webclient/: Action_plan.md  Cargo.toml  Dioxus.toml  Notes.md  intro.md
dx_webclient/assets/: tailwind.css
dx_webclient/assets/styling/: main.css  navbar.css
dx_webclient/src/: main.rs
dx_webclient/src/components/: auth.rs  auth_callback.rs  check.rs  logout.rs  mod.rs
dx_webclient/src/views/: dashboard.rs  faq.rs  home.rs  login.rs  mod.rs  navbar.rs  news.rs  offers.rs  register.rs
news_api/: Cargo.toml  NLP_Services_Integration.drawio  Notes.md  README.md  TODO.md
news_api/Certs/: readme.md
news_api/src/: auth.rs  config.rs  config.rs.old  db.rs  errors.rs  handlers.rs  main.rs  models.rs
yew_client/: Cargo.toml  Notes.md  Trunk.toml  index.html
yew_client/src/: app.rs  components.rs  main.rs  routes.rs  utils.rs
yew_client/src/pages/: auth_callback.rs  check.rs  dashbord.rs  faq.rs  home.rs  login.rs  mod.rs  register.rs
