[package]
version = "0.1.2"                                                                                                # Adding authentication support
name = "news_api"
edition = "2024"
authors = ["Med Tawfik AMHIL", "kde0x01@gmail.com"]
description = "A Rust API to Serve NLP Services"

[dependencies]
actix-web = { version = "4.12.1", features = ["openssl"] }
actix-cors = "0.7.1"
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.28"
openssl = "0.10.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
envy = "0.4"
thiserror = "2.0.17"
rusqlite = { version = "0.37.0", features = ["bundled"] }


# Authentication dependencies
oauth2 = {version="4.4"}
base64 = "0.22.1"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
dotenv = "0.15.0"
url = "2.5.7"
